[package]
name = "ssb-verify-signatures"
version = "1.0.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
description = "Verify signatures of scuttlebutt messages. In parallel."
edition = "2018"
license = "AGPL-3.0"


[dependencies]
arrayvec = "0.5.1"
base64 = "0.11.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
lazy_static = "1.4.0"
itertools = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
snafu = "0.6.0"
ssb-legacy-msg-data = "0.1.2" 
rand = "0.8.3"
rayon = "1.2"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
