[package]
name = "ssb-verify-signatures"
version = "1.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
description = "Verify signatures of scuttlebutt messages. In parallel."
repository = "https://github.com/sunrise-choir/ssb-verify-signatures"
documentation = "https://sunrise-choir.github.io/ssb-verify-signatures/ssb_verify_signatures/index.html"
license = "AGPL-3.0"

[dependencies]
arrayvec = "0.5.2"
base64 = "0.13.0"
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
lazy_static = "1.4.0"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
snafu = "0.6.10"
ssb-crypto = "0.2.2"
ssb-legacy-msg-data = "0.1.3"
rand = "0.8.3"
rayon = "1.5.1"
regex = "1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
